--- a/warmupjs.html
+++ b/warmupjs.html
@@ -51,7 +51,6 @@
 <!--    */-->
 
 
-
 <!--	/*-->
 <!--        ================================= setInterval()-->
 
@@ -115,8 +114,6 @@
 <!--	//    console.log(x);-->
 
 
-
-
 <!--	// ================================= Location object-->
 
 <!--	// Redirect-->
@@ -134,112 +131,211 @@
 
 <!--</body>-->
 <!--</html>-->
-"use strict";
+<!--<!doctype html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <meta name="viewport"-->
+<!--          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">-->
+<!--    <meta http-equiv="X-UA-Compatible" content="ie=edge">-->
+<!--    <title>DOM Lecture</title>-->
+<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"-->
+<!--          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
+<!--    <script src="warmupjs.js"></script>-->
+<!--    <style>-->
+<!--            body {-->
+<!--            background: #eee;-->
+<!--            min-height: 1800px;-->
+<!--            }-->
+<!--    </style>-->
+<!--</head>-->
+<!--<body>-->
+<!--<header class="container">-->
+<!--    <div class="jumbotron bg-success">-->
+<!--        <h1 id="main-heading" class="text-center text-light">Document Object Model <small>(DOM)</small></h1>-->
+<!--    </div>-->
+<!--</header>-->
+<!--<main class="container">-->
 
-// ========== Retrieve elements by id, class, tag name
+<!--    <section class="row">-->
+<!--        <div class="col">-->
+<!--            <h2>Some Table</h2>-->
+<!--            <table class="table">-->
+<!--                <thead>-->
+<!--                <tr>-->
+<!--                    <th>#</th>-->
+<!--                    <th>First</th>-->
+<!--                    <th>Last</th>-->
+<!--                    <th>Handle</th>-->
+<!--                </tr>-->
+<!--                </thead>-->
+<!--                <tbody>-->
+<!--                <tr>-->
+<!--                    <td>1</td>-->
+<!--                    <td>Mark</td>-->
+<!--                    <td>Otto</td>-->
+<!--                    <td>@mdo</td>-->
+<!--                </tr>-->
+<!--                <tr>-->
+<!--                    <td>2</td>-->
+<!--                    <td>Jacob</td>-->
+<!--                    <td>Thornton</td>-->
+<!--                    <td>@fat</td>-->
+<!--                </tr>-->
+<!--                <tr>-->
+<!--                    <td>3</td>-->
+<!--                    <td>Larry</td>-->
+<!--                    <td>the Bird</td>-->
+<!--                    <td>@twitter</td>-->
+<!--                </tr>-->
+<!--                </tbody>-->
+<!--            </table>-->
+<!--        </div>-->
+<!--        <div class="col">-->
+<!--            <h2>Some List</h2>-->
+<!--            <ul class="list-group">-->
+<!--                <li class="list-group-item">Cras justo odio</li>-->
+<!--                <li class="list-group-item">Dapibus ac facilisis in</li>-->
+<!--                <li class="list-group-item">Morbi leo risus</li>-->
+<!--                <li class="list-group-item">Porta ac consectetur ac</li>-->
+<!--                <li class="list-group-item">Vestibulum at eros</li>-->
+<!--            </ul>-->
+<!--        </div>-->
+<!--    </section>-->
+<!--    <hr>-->
+<!--    <section class="row">-->
+<!--        <div class="col-12">-->
+<!--            <h2>Some Items</h2>-->
+<!--        </div>-->
+<!--        <div class="col-md-3 d-flex align-items-stretch mb-3">-->
+<!--            <div class="card">-->
+<!--                <img src="img/cat.jpg" alt="" class="card-img-top img-fluid">-->
+<!--                <div class="card-body">-->
+<!--                    <h3 class="card-title">Card </h3>-->
+<!--                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet dicta fugit-->
+<!--                        molestiae necessitatibus obcaecati odit praesentium quos rem repellendus tempore!</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="col-md-3 d-flex align-items-stretch mb-3">-->
+<!--            <div class="card">-->
+<!--                <img src="img/cat.jpg" alt="" class="card-img-top img-fluid">-->
+<!--                <div class="card-body">-->
+<!--                    <h3 class="card-title">Card </h3>-->
+<!--                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aspernatur-->
+<!--                        assumenda cum eaque magnam modi nemo nostrum repellendus veritatis voluptatem!</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="col-md-3 d-flex align-items-stretch mb-3">-->
+<!--            <div class="card">-->
+<!--                <img src="img/cat.jpg" alt="" class="card-img-top img-fluid">-->
+<!--                <div class="card-body">-->
+<!--                    <h3 class="card-title">Card </h3>-->
+<!--                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aliquam-->
+<!--                        atque commodi corporis ex expedita fugit iste neque reiciendis reprehenderit?</p>ates.</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="col-md-3 d-flex align-items-stretch mb-3">-->
+<!--            <div class="card">-->
+<!--                <img src="img/cat.jpg" alt="" class="card-img-top img-fluid">-->
+<!--                <div class="card-body">-->
+<!--                    <h3 class="card-title">Card </h3>-->
+<!--                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam explicabo-->
+<!--                        porro provident quidem sint! Architecto eligendi iusto natus necessitatibus recusandae!</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
+<!--    <hr>-->
+<!--    <section class="row">-->
+<!--        <div class="col">-->
+<!--            <h2>Some Form</h2>-->
+<!--            <form action="" method="POST" name="feedback-form">-->
+<!--                <div class="form-group">-->
+<!--                    <label for="username">Username</label>-->
+<!--                    <input class="form-control" type="text" name="username" id="username" placeholder="Enter username">-->
+<!--                </div>-->
+<!--                <div class="form-group">-->
+<!--                    <label for="feedback">Feedback</label>-->
+<!--                    <textarea class="form-control" name="feedback" id="feedback" cols="30" rows="10"-->
+<!--                              placeholder="Give us your opinion"></textarea>-->
+<!--                </div>-->
+<!--                <button class="btn btn-primary btn-block">Submit</button>-->
+<!--            </form>-->
+<!--        </div>-->
+<!--    </section>-->
+<!--    <hr>-->
+<!--    <section>-->
+<!--        <p class="cowboy" id="cowboy"-->
+<!--           data-1="howdy"-->
+<!--           data-author="Justin Reich"-->
+<!--           data-genre="fiction"-->
+<!--           data-device="mobile">-->
+<!--            This is a test sentence about cowboys.-->
+<!--        </p>-->
+<!--    </section>-->
 
-// // id
-//     const header = document.getElementById('main-title');
-//     console.log(header);
+<!--</main>-->
 
-// // class - will return an HTMLCollection
-//     const cards = document.getElementsByClassName('card');
-//     console.log(cards);
-//     console.log(cards[0]);
-//     // cards.pop(); // ERR/**/OR: Array specific method
-//     const cardsArr = Array.from(cards); // convert HTMLCollection and NodeList to Array
-//     cardsArr.pop();
-//     console.log(cardsArr);
+<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"-->
+<!--        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"-->
+<!--        crossorigin="anonymous"></script>-->
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"-->
+<!--        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"-->
+<!--        crossorigin="anonymous"></script>-->
+<!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"-->
+<!--        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"-->
+<!--        crossorigin="anonymous"></script>-->
+<!--<script src="js/dom-lecture.js"></script>-->
 
+<!--</body>-->
+<!--</html>-->
+<!--<!doctype html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <meta name="viewport"-->
+<!--          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">-->
+<!--    <meta http-equiv="X-UA-Compatible" content="ie=edge">-->
+<!--    <title>Document</title>-->
+<!--    <script src="js/warmupjs.js"></script>-->
+<!--</head>-->
+<!--<body>-->
 
+<!--</body>-->
+<!--</html>-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>DOM Events Lecture</title>
+</head>
+<body>
 
-// // tag
-//     const sections = document.getElementsByTagName('section');
-//     console.log(sections);
+<h1>DOM Events Lecture</h1>
+<button id="test-btn">Test Button</button>
+<button id="shrink-btn">Restore Text Size</button>
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Ad aliquam culpa delectus dolores ducimus eius eum ex excepturi
+    impedit incidunt ipsum minus necessitatibus officia quisquam,
+    recusandae rerum similique sit veniam? Lorem ipsum dolor sit amet,
+    consectetur adipisicing elit.
+</p>
 
-
-// ========== Query Selector and Query Selector All
-
-// querySelector()
-
-// const headerTitle = document.querySelector('header h1');
-// const headerTitle = document.querySelector('#main-title');
-// console.log(headerTitle);
-
-// const li = document.querySelector('li'); // only returns first matching
-// console.log(li);
-
-// const lis = document.querySelectorAll('li'); // only returns first matching
-// console.log(lis);
-
-// const secondLi = document.querySelector('li:nth-child(2)');
-// console.log(secondLi);
-
-
-
-// // ========== Direct access to form inputs
-//
-//     const forms = document.forms;
-//     console.log(forms['feedback-form'].feedback.value);
-
-
-// ========== Accessing and modifying elements and properties
-
-// // get value of innerHTML
-//     const heading = document.getElementById("main-heading");
-//     console.log(heading);
-//
-//     console.log(heading.innerHTML);
-//     console.log(heading.innerText);
-
-// set value of innerHTML
-//     heading.innerHTML = "<em>Hi MOM!</em>";
-
-// // set value of innerText
-//     heading.innerText = "<em>Hi MOM!</em>";
-//
-// // append value to innerText (works the same with innerHTML)
-//     heading.innerHTML += " ...and hi Mom!";
+<div style="height: 1000px"></div>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur blanditiis consequuntur cumque deserunt ducimus
+    ea error est expedita fuga fugit harum illo illum magnam nobis quae quasi qui ratione repellat saepe, similique
+    tenetur vitae voluptas. Accusantium aspernatur eum hic reiciendis saepe soluta temporibus voluptate voluptatum.
+    Aliquid commodi, corporis doloribus enim eveniet harum ipsam libero magni minus nihil nisi possimus quas similique
+    sint sit tempora totam vero vitae? Accusantium aperiam, corporis distinctio dolor, dolorum, iure laudantium modi
+    nihil perferendis possimus quisquam rem sequi soluta velit vero? Aut autem dolorem eos facere facilis obcaecati
+    officia perspiciatis provident, suscipit voluptates! A, ipsum, ratione.</p>
 
 
-// // ========== Accessing and modifying attributes
-//
-// // check if attribute exists
-//     const cowboy = document.getElementById('cowboy');
-//     console.log(cowboy.hasAttribute('data-1'));
-//
-// // get an attribute value
-//     console.log(cowboy.getAttribute('data-1'));
-//
-// // create a new attribute or change a value of an existing attribute
-//     cowboy.setAttribute('data-1', 'hello');
-//     cowboy.setAttribute('data-test', 'testing');
-//     console.log(cowboy.getAttribute('data-1'));
-//
-// // remove attribute
-//     cowboy.removeAttribute("data-test");
-//     console.log(cowboy);
+<script src="js/warmupjs.js"></script>
 
-
-// // ========== Accessing and modifying styles
-//
-// // single style
-//     const jumbotron = document.querySelector('.jumbotron');
-//     jumbotron.style.display = "none";
-//     jumbotron.style['font-family'] = "times";
-//
-// // apply multiple style changes
-//     Object.assign(jumbotron.style, {
-//         border: "10px solid black","font-family": "times", "text-decoration": "underline"
-//     });
-//
-// // styling node list
-//     const tableRows = document.getElementsByTagName("tr");
-//     for (let i = 0; i < tableRows.length; i += 1) {
-//         tableRows[i].style.background = "red";
-//     }
-
-
-// // ========== Add / Remove Elements
-//
-// see curriculum links
+</body>
+</html>
